# oidc_github

./: .gitignore  .pylintrc  Dockerfile  Procfile  README.md  buildspec.yml  pyproject.toml  report.xml
.github/workflows/: main.yml
src/: etl.py  main.py  requirements.txt
test/: test_main.py
