[tool.poetry]
name = "flex"
version = "0.1.0"
description = ""
authors = ["Joseph Ojo <joseph.ojo@kobo360.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
